# so_prueba

./: .gitignore  CMakeLists.txt  action.yml  coverage_output.txt
.github/actions/building/: action.yml
.github/actions/coverage/: action.yml
.github/workflows/: MainAction.yml  build.yml
include/: profile.h  prueba.h
src/: main.c  profile.c
tests/: CMakeLists.txt  test_profile.c
virtualenv/: pyvenv.cfg
